--- a/style.css
+++ b/style.css
@@ -142,6 +142,15 @@ body{
     border-bottom: 1px solid #EBEDED;
     padding: 10px 0px 10px 24px;
     margin-bottom: 20px;
+    display: none;
+    overflow: hidden;
+    /* max-height: 0; */
+    transition: max-height 0.2s ease-out linear;
+}
+.dropdown-wrapper.active{
+    display: block;
+    transition: max-height 0.2s ease-out;
+    margin-top: 20px;
 }
 
 .dropdown-list-item{
